[package]
name = "hello"
version = "0.1.0"
authors = ["phantom <623601391@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.1"
ctrlc = "3.1.3"
crossbeam-channel = "0.4.0"
rocket = "0.4.2"
redis = "0.15.1"
